--- a/Birds Flyby animation/index.html
+++ b/Birds Flyby animation/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Animated - SVG Birds</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./birds.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div class="container">
 	
 	<h1>SVG Animated Birds</h1>
@@ -19,3 +30,7 @@
 	</div>
 	
 </div>
+<!-- partial -->
+  
+</body>
+</html>
