--- a/Indian Flag/index.html
+++ b/Indian Flag/index.html
@@ -1,24 +1,37 @@
-<div id="bg">
-  <div id="flag">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span id="chakra">
-      <span id="inner">
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-        <span class="spike"></span>
-
-      </span><span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Indian Flag</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="bg">
+    <div id="flag">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span id="chakra">
+        <span id="inner">
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+          <span class="spike"></span>
+  
+        </span><span>
+    </div>
+       
   </div>
-      <span id="pole"><span>
-</div>
+  
+</body>
+</html>
