Made a common size for all pictures

--- a/Carousel of pictures/index.html
+++ b/Carousel of pictures/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <img src="" alt="Default picture" width="516px">
+        <img src="" alt="Default picture" width="516px" height="290.25px">
         <p>Image Name and Description</p>
         <button id=next>Next</button>
     </div>
